<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bajo_peso"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bajoPeso"
    tools:context="com.example.tyrrang.ejercicio_002.BajoPeso">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/bajoPeso"
        android:textSize="28sp"
        android:textColor="#000"
        android:layout_gravity="center"
        android:id="@+id/txtbajoPeso"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAyuda"
        android:text="@string/recomendacion"
        android:textSize="20sp"
        android:textColor="#000"
        />

    <ImageView
        android:layout_width="266dp"
        android:layout_height="234dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bajopeso"
        android:id="@+id/imageButton"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Regresar"
        android:id="@+id/btnRegresar"
        android:layout_weight="1"
        android:background="@color/regresar"
        android:textColor="@color/letras"
        android:textSize="20sp"
        />

</LinearLayout>
