<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sobre_peso"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/sobre"
    tools:context="com.example.tyrrang.ejercicio_002.SobrePeso">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sobrePeso"
        android:id="@+id/txtsobrePeso"
        android:textSize="28sp"
        android:textColor="@color/letras"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAyuda"
        android:text="@string/recomendacionsobre"
        android:textColor="#fff"
        android:textSize="20sp"
        />

    <ImageView
        android:layout_width="266dp"
        android:layout_height="234dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sobrepeso"
        android:id="@+id/imageButton"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Regresar"
        android:id="@+id/btnRegresar"
        android:layout_weight="1"
        android:background="@color/regresar"
        android:textColor="@color/letras"
        android:textSize="20sp"
        />


</LinearLayout>
